src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBSync_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBSync_StringErrorContext.class */
public final class ARBSync_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glFenceSync(II)J", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("nglIsSync(J)Z", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("glIsSync(J)Z", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("glDeleteSync(J)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("nglClientWaitSync(JIJ)I", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("glClientWaitSync(JIJ)I", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("nglWaitSync(JIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("glWaitSync(JIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("nglGetInteger64v(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("glGetInteger64v(ILjava/nio/LongBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("glGetInteger64(I)J", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("nglGetSynciv(JIIJJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("glGetSynciv(JILjava/nio/IntBuffer;Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("glGetSynci(JILjava/nio/IntBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("glGetInteger64v(I[J)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        methods.put("glGetSynciv(JI[I[I)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSyncErrorContext");
        return methods;
    }
}
